--- a/src/views/auth/alert/alert.ejs
+++ b/src/views/auth/alert/alert.ejs
@@ -1,2 +1,11 @@
-<div class="alert alert-danger">Error example.</div>
-<div class="alert alert-success">Success example.</div>
+<% if(errors) { %>
+    <% errors.forEach(item => { %>
+        <script>openRegisterModal()</script>
+        <div class="alert alert-danger"> <%- item %> </div>
+    <% }); %>
+<% } %>
+
+<% if(success != '') { %>
+    <script>openLoginModal()</script>
+    <div class="alert alert-success"> <%- success %> </div>
+<% } %>
