--- a/src/views/auth/master.ejs
+++ b/src/views/auth/master.ejs
@@ -25,7 +25,7 @@
         <div class="col-sm-8 my-content">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="login-title text-center">Welcome To My Awesome Chat</h1>
+                    <h1 class="login-title text-center">Welcome, Something...</h1>
                     <hr>
                     <div class="col-sm-3"></div>
                     <div class="col-sm-6 table-responsive">
@@ -46,8 +46,16 @@
                                 <tr>
                                     <td>CV:</td>
                                     <td>
-                                        <a href="linkedin.com/in/minh-vũ-huỳnh-753653165" target="_blank">
+                                        <a href="https://linkedin.com/in/minh-vũ-huỳnh-753653165" target="_blank">
                                             linkedin.com/in/minh-vũ-huỳnh-753653165
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Youtube:</td>
+                                    <td>
+                                        <a href="https://www.youtube.com/channel/UCvyNvzDyeuInsjojzW7E1aA" target="_blank">
+                                            youtube.com/channel/vhm
                                         </a>
                                     </td>
                                 </tr>
@@ -60,7 +68,7 @@
             <div class="row">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-7 text-center">
-                    <a class="btn big-login" data-toggle="modal" href="javascript:void(0)" onclick="openLoginModal();">Đăng nhập</a>
+                    <a class="btn big-login btn-green" data-toggle="modal" href="javascript:void(0)" onclick="openLoginModal();">Đăng nhập</a>
                     <a class="btn big-register" data-toggle="modal" href="javascript:void(0)" onclick="openRegisterModal();">Đăng ký</a>
                 </div>
                 <div class="col-sm-3"></div>
@@ -68,11 +76,11 @@
             <div class="row">
                 <div class="col-sm-12 text-center bottom-description">
                     <span>
-                        " Một chút hương thơm sẽ luôn bám vào đôi tay trao hoa hồng ! "
+                        " Suy nghĩ khác biệt! "
                     </span>
                     <br>
                     <span>
-                        " A little bit of fragrance always clings to the hands that gives you roses ! "
+                        " Think different! "
                     </span>
                 </div>
             </div>
