--- a/src/views/main/navbar/navbar.ejs
+++ b/src/views/main/navbar/navbar.ejs
@@ -6,8 +6,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="https://trungquandev.com/" target="__blank">
-                <img src="./libraries/images/logo_favicon/logo-trungquandev.png" alt="logo-trungquandev">
+            <a class="navbar-brand" href="https://vhmblog102.000webhostapp.com/" target="__blank">
+                <img src="./libraries/images/logo_favicon/logo-trungquandev.png" alt="logo - VHM">
             </a>
         </div>
         <div class="col-sm-3 no-padding">
@@ -61,8 +61,8 @@
                 </li>
                 <li class="dropdown" id="dropdown-navbar-user" data-uid="user._id">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <img class="avatar-small" src="./libraries/images/users//default-avatar-trungquandev-02.jpg" alt="">
-                        Trung Quân
+                        <img id="avatar-navbar" class="avatar-small" src="./libraries/images/users/<%= user.avatar %>" alt="">
+                        <%= user.username %>
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
