--- a/src/views/main/profile/profileModal.ejs
+++ b/src/views/main/profile/profileModal.ejs
@@ -97,7 +97,8 @@
                                         <div class="col-md-8">
                                             <input type="button" id="input-update-user" class="btn btn-primary custom-background-btn-primary" name="btnUpdate" value="Lưu lại">
                                             <span></span>
-                                            <input type="reset" id="input-cancel-user" class="btn btn-default custom-background-btn-reset" value="Hủy bỏ">
+                                            <input type="reset" id="input-reset-user" class="btn btn-default custom-background-btn-reset" value="Reset">
+                                            <input type="button" id="input-cancel" class="btn btn-default custom-background-btn-cancel" value="Hủy bỏ">
                                         </div>
                                     </div>
                                 </div>
@@ -144,7 +145,8 @@
                                     <div class="col-md-8">
                                         <input type="submit" class="btn btn-primary custom-background-btn-primary" value="Lưu lại">
                                         <span></span>
-                                        <input type="reset" class="btn btn-default custom-background-btn-reset" id="input-cancel-user-2" value="Hủy bỏ">
+                                        <input type="reset" class="btn btn-default custom-background-btn-reset" id="input-reset-user-2" value="Reset">
+                                        <input type="button" class="btn btn-default custom-background-btn-cancel" id="input-cancel-2" value="Hủy bỏ">
                                     </div>
                                 </div>
                             </form>
