--- a/src/views/main/navbar/navbar.ejs
+++ b/src/views/main/navbar/navbar.ejs
@@ -62,7 +62,7 @@
                 <li class="dropdown" id="dropdown-navbar-user" data-uid="user._id">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <img id="avatar-navbar" class="avatar-small" src="./libraries/images/users/<%= user.avatar %>" alt="">
-                        <%= user.username %>
+                        <span id="navbar-username"><%= user.username %></span>
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
