--- a/src/views/main/profile/profileModal.ejs
+++ b/src/views/main/profile/profileModal.ejs
@@ -107,15 +107,15 @@
                     </div>
                     <div id="password-profile" class="tab-pane fade">
                         <div class="col-md-9 personal-info">
-                            <div class="alert alert-danger alert-dismissable">
+                            <div class="alert alert-danger alert-dismissable response-update-password-error">
                                 <a class="panel-close close" data-dismiss="alert">×</a>
-                                Update password error example<br>
+                                <span></span>
                                 <!-- <script>openProfilePasswordModal();</script> -->
                             </div>
 
-                            <div class="alert alert-success alert-dismissable">
+                            <div class="alert alert-success alert-dismissable response-update-password-success">
                                 <a class="panel-close close" data-dismiss="alert">×</a>
-                                Update password success example<br>
+                                <span></span>
                                 <!-- <script>openProfilePasswordModal();</script> -->
                             </div>
 
@@ -125,25 +125,25 @@
                                 <div class="form-group">
                                     <label class="col-md-4 control-label">Mật khẩu cũ</label>
                                     <div class="col-md-8">
-                                        <input class="form-control" type="password" name="current_password" placeholder="Enter your curent password..." autocomplete="off">
+                                        <input id="input-current-password" class="form-control" type="password" name="current_password" placeholder="Enter your curent password..." autocomplete="off">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-md-4 control-label">Mật khẩu mới</label>
                                     <div class="col-md-8">
-                                        <input class="form-control" type="password" name="new_password" placeholder="Enter new password..." autocomplete="off">
+                                        <input id="input-new-password" class="form-control" type="password" name="new_password" placeholder="Enter new password..." autocomplete="off">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-md-4 control-label">Nhập lại mật khẩu mới</label>
                                     <div class="col-md-8">
-                                        <input class="form-control" type="password" name="confirm_new_password" placeholder="Enter confirm new password..." autocomplete="off">
+                                        <input id="input-confirm-password" class="form-control" type="password" name="confirm_new_password" placeholder="Enter confirm new password..." autocomplete="off">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-md-4 control-label"></label>
                                     <div class="col-md-8">
-                                        <input type="submit" class="btn btn-primary custom-background-btn-primary" value="Lưu lại">
+                                        <input type="button" id="input-update-password" class="btn btn-primary custom-background-btn-primary" value="Lưu lại">
                                         <span></span>
                                         <input type="reset" class="btn btn-default custom-background-btn-reset" id="input-reset-user-2" value="Reset">
                                         <input type="button" class="btn btn-default custom-background-btn-cancel" id="input-cancel-2" value="Hủy bỏ">
