--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./libraries/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./libraries/bower_components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="./libraries/bower_components/AlertifyJS/build/css/alertify.css">
+    <!-- <link rel="stylesheet" href="./libraries/bower_components/sweetalert2/dist/sweetalert2.min.css"> -->
     <link rel="stylesheet" href="./libraries/bower_components/emojionearea/dist/emojionearea.min.css">
     <link rel="stylesheet" href="./libraries/bower_components/photoset-grid/css/colorbox.css">
 
@@ -36,7 +37,8 @@
     <script src="./libraries/bower_components/moment/min/moment-with-locales.min.js"></script>
     <script src="./libraries/bower_components/emojionearea/dist/emojionearea.min.js"></script>
     <script src="./libraries/bower_components/peerjs/peer.min.js"></script>
-    <script src="./libraries/bower_components/sweetalert2/dist/sweetalert2.all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <!-- <script src="./libraries/bower_components/sweetalert2/dist/sweetalert2.all.min.js"></script> -->
     <script src="./libraries/bower_components/photoset-grid/jquery.photoset-grid.min.js"></script>
     <script src="./libraries/bower_components/jquery-colorbox/jquery.colorbox-min.js"></script>
 
