[16] Feature: Find User to Add Contact

--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -44,6 +44,7 @@
 
     <script src="./libraries/js/mainConfig.js"></script>
     <script src="./libraries/js/updateAvatar.js"></script>
+    <script src="./libraries/js/findUsers.js"></script>
 
     <%- include('contact/contactModal') %>
     
