--- a/src/views/main/contact/contactModal.ejs
+++ b/src/views/main/contact/contactModal.ejs
@@ -12,7 +12,7 @@
                         Danh bạ <span class="show-number-contacts count-contacts">(100)</span>
                     </a></li>
                     <li><a data-toggle="tab" id="link-request-contact-sent" href="#request-contact-sent">
-                        Đang chờ xác nhận <span class="show-number-contacts count-request-contact-sent">(100)</span>
+                        Đang chờ xác nhận <span class="show-number-contacts count-request-contact-sent"><b></b></span>
                     </a></li>
                     <li><a data-toggle="tab" id="link-request-contact-received" href="#request-contact-received">
                         Yêu cầu kết bạn <span class="show-number-contacts count-request-contact-received">(100)</span>
