--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -41,6 +41,7 @@
     <!-- <script src="./libraries/bower_components/sweetalert2/dist/sweetalert2.all.min.js"></script> -->
     <script src="./libraries/bower_components/photoset-grid/jquery.photoset-grid.min.js"></script>
     <script src="./libraries/bower_components/jquery-colorbox/jquery.colorbox-min.js"></script>
+    <script src="socket.io/socket.io.js"></script>
 
     <script src="./libraries/js/mainConfig.js"></script>
     <script src="./libraries/js/updateAvatar.js"></script>
