--- a/src/views/main/contact/contactModal.ejs
+++ b/src/views/main/contact/contactModal.ejs
@@ -15,7 +15,7 @@
                         Đang chờ xác nhận <span class="show-number-contacts count-request-contact-sent"><b></b></span>
                     </a></li>
                     <li><a data-toggle="tab" id="link-request-contact-received" href="#request-contact-received">
-                        Yêu cầu kết bạn <span class="show-number-contacts count-request-contact-received">(100)</span>
+                        Yêu cầu kết bạn <span class="show-number-contacts count-request-contact-received"><b></b></span>
                     </a></li>
                 </ul>
                 <div class="tab-content">
