[20] Feature: Store notifications And Show it

--- a/src/views/main/navbar/navbar.ejs
+++ b/src/views/main/navbar/navbar.ejs
@@ -38,12 +38,20 @@
                 </li>
                 <li>
                     <a href="#" id="noti_Button" data-toggle="modal" title="Thông báo">
-                        <i class="fa fa-globe"></i>
-                        <div class="noti_counter"><b></b></div>
+						<i class="fa fa-globe"></i>
+						<% if(notifications.length > 0){ %>
+							<div class="noti_counter">
+								<b><%= notifications.length %></b>
+							</div>
+						<% } %>
                         <div id="noti_Container">
                             <div id="notifications">
-                                <h3>Thông báo</h3>
-                                <div class="noti_content"></div>
+                                <h3>Đánh dấu tất cả đã đọc</h3>
+                                <div class="noti_content">
+									<% notifications.forEach(function(notify){ %>
+										<%- notify %>
+									<% }) %>
+								</div>
                                 <div class="seeAll"><a href="#">Xem tất cả</a></div>
                             </div>
                         </div>
