--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -306,7 +306,7 @@ label:focus,
 }
 
 .noti_counter {
-  display: none;
+  display: block;
   position: absolute;
   background: #E1141E;
   color: #FFF;
@@ -333,6 +333,8 @@ label:focus,
   margin-top: 5px;
   margin-left: 7px;
   color: #333;
+  padding: 5px;
+  /* border-bottom:3px solid rgba(255,255,255,0.5); */
 }
 
 .seeAll {
@@ -465,6 +467,7 @@ label:focus,
 .avatar-small {
   width: 24px;
   height: 24px;
+  margin-right: 2px;
   border-radius: 16px 16px 0 16px;
 }
 
@@ -1295,4 +1298,8 @@ label:focus,
 .response-update-password-error,
 .response-update-password-success{
   display: none;
+}
+
+.notify-readed-false{
+	background-color: #EAEAEA;
 }
