--- a/src/views/main/notification/notificationModal.ejs
+++ b/src/views/main/notification/notificationModal.ejs
@@ -17,9 +17,17 @@
 					<% }) %>
 				</ul>
 				<div class="modal-see-more-notify">
-					<a href="javascript:void(0)">
+					<a href="javascript:void(0)" id="link-read-more-notif">
 						<strong>Xem thêm thông báo</strong>
 					</a>
+					<div class="read-more-loader">
+						<div class="sk-wave">
+							<div class="sk-wave-rect"></div>
+							<div class="sk-wave-rect"></div>
+							<div class="sk-wave-rect"></div>
+							<div class="sk-wave-rect"></div>
+						</div>
+					</div>
 				</div>
             </div>
         </div>
