--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -456,13 +456,13 @@ label:focus,
 }
 .modal-mark-all-read{
 	display: flex;
-	justify-content: right;
+	justify-content: flex-end;
 	height: 40px;
 	font-size: 16px;
 }
 .modal-see-more-notify {
     text-align: center;
-	margin-top: 20px;
+	margin-top: 30px;
 	font-size: 16px;
 }
 
@@ -903,7 +903,7 @@ label:focus,
   max-width: 50%;
 }
 
-#loader {
+/* #loader {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -937,7 +937,7 @@ label:focus,
   100% {
     transform: rotate(360deg);
   }
-}
+} */
 
 .bubble-attach-file {
   background-color: #ECF0FE !important;
@@ -1332,3 +1332,93 @@ label:focus,
 	background-color: #EAEAEA;
 }
 
+
+.read-more-loader{
+	display: none;
+	left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+}
+.sk-wave {
+	width: 30px;
+	height: 30px;
+	display: flex;
+	justify-content: space-between;
+}
+  
+.sk-wave-rect {
+	background-color: #576574;
+	height: 100%;
+	width: 15%;
+	animation: sk-wave 1.2s infinite ease-in-out; 
+}
+  
+.sk-wave-rect:nth-child(1) { animation-delay: -1.2s; }
+.sk-wave-rect:nth-child(2) { animation-delay: -1.1s; }
+.sk-wave-rect:nth-child(3) { animation-delay: -1.0s; }
+.sk-wave-rect:nth-child(4) { animation-delay: -0.9s; }
+.sk-wave-rect:nth-child(5) { animation-delay: -0.8s; }
+
+@keyframes sk-wave {
+	0%, 40%, 100% {
+	  transform: scaleY(0.4); 
+	} 20% {
+	  transform: scaleY(1); 
+	} 
+}
+
+
+.loader{
+	display: block;
+	position: absolute;
+	z-index: 1000;
+    width: 100%;
+    height: 100%;
+    opacity: .9;
+}
+.loader-main{
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	margin: -75px 0 0 -75px;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	background: linear-gradient(45deg, transparent, transparent 40%, #E5F403);
+	animation: loader-main 2s linear infinite;
+}
+.loader-main::before{
+	content: '';
+	position: absolute;
+	top: 6px;
+	left: 6px;
+	right: 6px;
+	bottom: 6px;
+	background: #fff;
+	border-radius: 50%;
+	z-index: 1000;
+}
+.loader-main::after{
+	content: '';
+	position: absolute;
+	top: 6px;
+	left: 6px;
+	right: 6px;
+	bottom: 6px;
+	background: linear-gradient(45deg, transparent, transparent 40%, #E5F403);
+	border-radius: 50%;
+	z-index: 1;
+	filter: blur(30px)
+}
+
+@keyframes loader-main{
+	0%{
+		transform: rotate(0);
+		filter: hue-rotate(0);
+	}
+	100%{
+		transform: rotate(360deg);
+		filter: hue-rotate(360deg);
+	}
+}
