[23] feature: Mark all notifications as read & Fix notify counter

--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -51,6 +51,7 @@
     <script src="./libraries/js/requestContact.js"></script>
     <script src="./libraries/js/findUsers.js"></script>
     <script src="./libraries/js/readMoreNotif.js"></script>
+    <script src="./libraries/js/markAllAsRead.js"></script>
 
     <%- include('contact/contactModal') %>
     
