--- a/src/views/main/notification/notificationModal.ejs
+++ b/src/views/main/notification/notificationModal.ejs
@@ -7,7 +7,7 @@
             </div>
             <div class="modal-body">
 				<div class="modal-mark-all-read">
-					<a href="javascript:void(0)">
+					<a href="javascript:void(0)" id="modal-mark-all-as-read">
 						<strong>Đánh dấu tất cả đã đọc</strong>
 					</a>
 				</div>
