--- a/src/views/main/contact/contactModal.ejs
+++ b/src/views/main/contact/contactModal.ejs
@@ -9,13 +9,34 @@
                 <ul class="nav nav-tabs">
                     <li class="active"><a data-toggle="tab" href="#find-user">Tìm người dùng</a></li>
                     <li><a data-toggle="tab" id="link-contacts" href="#contacts">
-                        Danh bạ <span class="show-number-contacts count-contacts">(100)</span>
+						Danh bạ 
+						<% if(countAllContacts > 0) { %>
+							<span class="show-number-contacts count-contacts">
+								(<b><%= countAllContacts %></b>)
+							</span>
+						<% } else{ %>
+							<span class="show-number-contacts count-contacts d-none">(<b></b>)</span>
+						<% } %>
                     </a></li>
                     <li><a data-toggle="tab" id="link-request-contact-sent" href="#request-contact-sent">
-                        Đang chờ xác nhận <span class="show-number-contacts count-request-contact-sent"><b></b></span>
+						Đang chờ xác nhận 
+						<% if(countAllContactsSend > 0) { %>
+							<span class="show-number-contacts count-request-contact-sent">
+								(<b><%= countAllContactsSend %></b>)
+							</span>
+						<% } else{ %>
+							<span class="show-number-contacts count-request-contact-sent d-none">(<b></b>)</span>
+						<% } %>
                     </a></li>
                     <li><a data-toggle="tab" id="link-request-contact-received" href="#request-contact-received">
-                        Yêu cầu kết bạn <span class="show-number-contacts count-request-contact-received"><b></b></span>
+						Yêu cầu kết bạn 
+						<% if(countAllContactsReceived > 0) { %>
+							<span class="show-number-contacts count-request-contact-received">
+								(<b><%= countAllContactsReceived %></b>)
+							</span>
+						<% } else{ %>
+							<span class="show-number-contacts count-request-contact-received d-none">(<b></b>)</span>
+						<% } %>
                     </a></li>
                 </ul>
                 <div class="tab-content">
@@ -37,81 +58,87 @@
                     <div id="contacts" class="tab-pane fade">
                         <div class="find-user-bottom">
                             <ul class="contactList">
-                                <li class="_contactList" data-uid="user._id">
-                                    <div class="contactPanel">
-                                        <div class="user-avatar">
-                                            <img src="./libraries/images/users/default-avatar-trungquandev-01.jpg" alt="">
-                                        </div>
-                                        <div class="user-name">
-                                            <p>
-                                                Trung Quân
-                                            </p>
-                                        </div>
-                                        <br>
-                                        <div class="user-address">
-                                            <span>&nbsp Hà Nội, Việt Nam.</span>
-                                        </div>
-                                        <div class="user-talk" data-uid="user._id">
-                                            Trò chuyện
-                                        </div>
-                                        <div class="user-remove-contact action-danger" data-uid="user._id">
-                                            Xóa liên hệ
-                                        </div>
-                                    </div>
-                                </li>
+								<% contacts.forEach(function(user){ %>
+									<li class="_contactList" data-uid="<%= user._id %>">
+										<div class="contactPanel">
+											<div class="user-avatar">
+												<img src="./libraries/images/users/<%= user.avatar %>" alt="">
+											</div>
+											<div class="user-name">
+												<p>
+													<%= user.username %>
+												</p>
+											</div>
+											<br>
+											<div class="user-address">
+												<span>&nbsp <%= user.address %></span>
+											</div>
+											<div class="user-talk" data-uid="<%= user._id %>">
+												Trò chuyện
+											</div>
+											<div class="user-remove-contact action-danger" data-uid="<%= user._id %>">
+												Xóa liên hệ
+											</div>
+										</div>
+									</li>
+								<% }) %>
                             </ul>
                         </div>
                     </div>
                     <div id="request-contact-sent" class="tab-pane fade">
                         <div class="find-user-bottom">
                             <ul class="contactList">
-                                <li class="_contactList" data-uid="user._id">
-                                    <div class="contactPanel">
-                                        <div class="user-avatar">
-                                            <img src="./libraries/images/users/default-avatar-trungquandev-01.jpg" alt="">
-                                        </div>
-                                        <div class="user-name">
-                                            <p>
-                                                Trung Quân
-                                            </p>
-                                        </div>
-                                        <br>
-                                        <div class="user-address">
-                                            <span>&nbsp Hà Nội, Việt Nam.</span>
-                                        </div>
-                                        <div class="user-remove-request-sent action-danger" data-uid="user._id">
-                                            Hủy yêu cầu
-                                        </div>
-                                    </div>
-                                </li>
+								<% contactsSent.forEach(function(user){ %>
+									<li class="_contactList" data-uid="<%= user._id %>">
+										<div class="contactPanel">
+											<div class="user-avatar">
+												<img src="./libraries/images/users/<%= user.avatar %>" alt="">
+											</div>
+											<div class="user-name">
+												<p>
+													<%= user.username %>
+												</p>
+											</div>
+											<br>
+											<div class="user-address">
+												<span>&nbsp <%= user.address %></span>
+											</div>
+											<div class="user-remove-request-sent action-danger" data-uid="<%= user._id %>">
+												Hủy yêu cầu
+											</div>
+										</div>
+									</li>
+								<% }) %>
                             </ul>
                         </div>
                     </div>
                     <div id="request-contact-received" class="tab-pane fade">
                         <div class="find-user-bottom">
                             <ul class="contactList">
-                                <li class="_contactList" data-uid="user._id">
-                                    <div class="contactPanel">
-                                        <div class="user-avatar">
-                                            <img src="./libraries/images/users/default-avatar-trungquandev-01.jpg" alt="">
-                                        </div>
-                                        <div class="user-name">
-                                            <p>
-                                                Trung Quân
-                                            </p>
-                                        </div>
-                                        <br>
-                                        <div class="user-address">
-                                            <span>&nbsp Hà Nội, Việt Nam.</span>
-                                        </div>
-                                        <div class="user-acccept-contact-received" data-uid="user._id">
-                                            Chấp nhận
-                                        </div>
-                                        <div class="user-reject-request-contact-received action-danger" data-uid="user._id">
-                                            Xóa yêu cầu
-                                        </div>
-                                    </div>
-                                </li>
+								<% contactsReceived.forEach(function(user){ %>
+									<li class="_contactList" data-uid="<%= user._id %>">
+										<div class="contactPanel">
+											<div class="user-avatar">
+												<img src="./libraries/images/users/<%= user.avatar %>" alt="">
+											</div>
+											<div class="user-name">
+												<p>
+													<%= user.username %>
+												</p>
+											</div>
+											<br>
+											<div class="user-address">
+												<span>&nbsp <%= user.address %></span>
+											</div>
+											<div class="user-acccept-contact-received" data-uid="<%= user._id %>">
+												Chấp nhận
+											</div>
+											<div class="user-reject-request-contact-received action-danger" data-uid="<%= user._id %>">
+												Xóa yêu cầu
+											</div>
+										</div>
+									</li>
+								<% }) %>
                             </ul>
                         </div>
                     </div>
