--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -52,6 +52,9 @@
     <script src="./libraries/js/findUsers.js"></script>
     <script src="./libraries/js/readMoreNotif.js"></script>
     <script src="./libraries/js/markAllAsRead.js"></script>
+    <script src="./libraries/js/readMoreContacts.js"></script>
+    <script src="./libraries/js/readMoreContactsSent.js"></script>
+    <script src="./libraries/js/readMoreContactsReceived.js"></script>
 
     <%- include('contact/contactModal') %>
     
