--- a/src/views/main/contact/contactModal.ejs
+++ b/src/views/main/contact/contactModal.ejs
@@ -17,7 +17,7 @@
 						<% } else{ %>
 							<span class="show-number-contacts count-contacts d-none">(<b></b>)</span>
 						<% } %>
-                    </a></li>
+					</a></li>
                     <li><a data-toggle="tab" id="link-request-contact-sent" href="#request-contact-sent">
 						Đang chờ xác nhận 
 						<% if(countAllContactsSend > 0) { %>
@@ -82,7 +82,20 @@
 										</div>
 									</li>
 								<% }) %>
-                            </ul>
+							</ul>
+							<div class="modal-see-more-contacts">
+								<a href="javascript:void(0)" id="link-read-more-contacts">
+									<strong>Xem thêm danh bạ</strong>
+								</a>
+								<div class="read-more-contacts-loader">
+									<div class="sk-wave">
+										<div class="sk-wave-rect"></div>
+										<div class="sk-wave-rect"></div>
+										<div class="sk-wave-rect"></div>
+										<div class="sk-wave-rect"></div>
+									</div>
+								</div>
+							</div>
                         </div>
                     </div>
                     <div id="request-contact-sent" class="tab-pane fade">
@@ -109,7 +122,20 @@
 										</div>
 									</li>
 								<% }) %>
-                            </ul>
+							</ul>
+							<div class="modal-see-more-contacts-sent">
+								<a href="javascript:void(0)" id="link-read-more-contacts-sent">
+									<strong>Xem thêm yêu cầu đã gửi</strong>
+								</a>
+								<div class="read-more-contacts-sent-loader">
+									<div class="sk-wave">
+										<div class="sk-wave-rect"></div>
+										<div class="sk-wave-rect"></div>
+										<div class="sk-wave-rect"></div>
+										<div class="sk-wave-rect"></div>
+									</div>
+								</div>
+							</div>
                         </div>
                     </div>
                     <div id="request-contact-received" class="tab-pane fade">
@@ -139,7 +165,20 @@
 										</div>
 									</li>
 								<% }) %>
-                            </ul>
+							</ul>
+							<div class="modal-see-more-contacts-received">
+								<a href="javascript:void(0)" id="link-read-more-contacts-received">
+									<strong>Xem thêm yêu cầu kết bạn</strong>
+								</a>
+								<div class="read-more-contacts-received-loader">
+									<div class="sk-wave">
+										<div class="sk-wave-rect"></div>
+										<div class="sk-wave-rect"></div>
+										<div class="sk-wave-rect"></div>
+										<div class="sk-wave-rect"></div>
+									</div>
+								</div>
+							</div>
                         </div>
                     </div>
                 </div>
