--- a/src/views/main/profile/profileModal.ejs
+++ b/src/views/main/profile/profileModal.ejs
@@ -97,7 +97,7 @@
                                         <div class="col-md-8">
                                             <input type="button" id="input-update-user" class="btn btn-primary custom-background-btn-primary" name="btnUpdate" value="Lưu lại">
                                             <span></span>
-                                            <input type="reset" id="input-reset-user" class="btn btn-default custom-background-btn-reset" value="Reset">
+                                            <input type="button" id="input-reset-user" class="btn btn-default custom-background-btn-reset" value="Reset">
                                             <input type="button" id="input-cancel" class="btn btn-default custom-background-btn-cancel" value="Hủy bỏ">
                                         </div>
                                     </div>
