--- a/src/public/libraries/css/auth.css
+++ b/src/public/libraries/css/auth.css
@@ -13,20 +13,39 @@ body {
   /*position: fixed;*/
   /*width: 100%;*/
   height: 100vh;
-  background-color: #f8f8f8;
+  /* #f8f8f8 */
+  background-color: #333333; 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
-  background-image: url("../images/background/j2team.jpg");
-  background-size: cover;
-  background-repeat: none;
+  /* background-image: url("../images/background/image.jpg"); */
+  /* background-size: cover;
+  background-repeat: none; */
   color: #fff;
 }
 
 .container {
+  width: 100%;
   height: 100%;
+  background-color: rgba(10, 61, 98,.5);
+  background-blend-mode: screen;
+}
+
+.bg-video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .3;
+	z-index: -1;
+}
+.bg-video-content{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .my-content {
@@ -54,7 +73,9 @@ hr {
 .table a {
   color: #fff;
 }
-
+.big-login{
+	margin: 0 5px 0 10px;
+}
 .my-table>tbody>tr>td {
   border-top: 0px;
   font-size: 15px;
@@ -198,7 +219,6 @@ hr {
 .login .modal-header {
   border: 0 none;
   padding: 15px 15px 15px;
-  /*     padding: 11px 15px; */
 }
 
 .login .division {
