--- a/src/views/auth/master.ejs
+++ b/src/views/auth/master.ejs
@@ -21,8 +21,15 @@
 </head>
 <body>
     <div class="container">
+		<div class="bg-video">
+			<video class="bg-video-content" autoplay muted loop>
+				<source src="./libraries/images/background/Boulevard.mp4" type="video/mp4" />
+				<source src="./libraries/images/background/Boulevard.webm" type="video/webm" />
+				Your browser is not supported
+			</video>
+		</div>
         <div class="col-sm-2"></div>
-        <div class="col-sm-8 my-content">
+        <div class="col-md-8 my-content">
             <div class="row">
                 <div class="col-sm-12">
                     <h1 class="login-title text-center">Welcome, Something...</h1>
@@ -38,8 +45,8 @@
                                 <tr>
                                     <td>Blog:</td>
                                     <td>
-                                        <a href="http://vhmblog102.000webhostapp.com/" target="_blank">
-                                            http://vhmblog102.000webhostapp.com/
+                                        <a href="https://vhmblog102.000webhostapp.com/" target="_blank">
+                                            vhmblog102.com
                                         </a>
                                     </td>
                                 </tr>
@@ -47,7 +54,15 @@
                                     <td>CV:</td>
                                     <td>
                                         <a href="https://linkedin.com/in/minh-vũ-huỳnh-753653165" target="_blank">
-                                            linkedin.com/in/minh-vũ-huỳnh-753653165
+                                            linkedin.com/vhm205
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Facebook:</td>
+                                    <td>
+                                        <a href="https://facebook.com/vhm205" target="_blank">
+                                            facebook.com/vhm205
                                         </a>
                                     </td>
                                 </tr>
@@ -55,7 +70,7 @@
                                     <td>Youtube:</td>
                                     <td>
                                         <a href="https://www.youtube.com/channel/UCvyNvzDyeuInsjojzW7E1aA" target="_blank">
-                                            youtube.com/channel/vhm
+                                            youtube.com/channel/vhm205
                                         </a>
                                     </td>
                                 </tr>
@@ -76,11 +91,10 @@
             <div class="row">
                 <div class="col-sm-12 text-center bottom-description">
                     <span>
-                        " Suy nghĩ khác biệt! "
-                    </span>
-                    <br>
-                    <span>
-                        " Think different! "
+						<q> 
+							First, Solve The Problem, <br />
+							Then, Write The Code!
+						</q>
                     </span>
                 </div>
             </div>
