--- a/src/views/main/contact/contactModal.ejs
+++ b/src/views/main/contact/contactModal.ejs
@@ -116,7 +116,7 @@
 											<div class="user-address">
 												<span>&nbsp <%= user.address %></span>
 											</div>
-											<div class="user-remove-request-sent action-danger" data-uid="<%= user._id %>">
+											<div class="user-remove-request-contact d-important action-danger" data-uid="<%= user._id %>">
 												Hủy yêu cầu
 											</div>
 										</div>
@@ -159,7 +159,7 @@
 											<div class="user-acccept-contact-received" data-uid="<%= user._id %>">
 												Chấp nhận
 											</div>
-											<div class="user-reject-request-contact-received action-danger" data-uid="<%= user._id %>">
+											<div class="user-remove-request-contact-received action-danger" data-uid="<%= user._id %>">
 												Xóa yêu cầu
 											</div>
 										</div>
