[27] Feature: Accept Request Contact

--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -51,6 +51,7 @@
     <script src="./libraries/js/calculate.js"></script>
     <script src="./libraries/js/requestContact.js"></script>
 	<script src="./libraries/js/findUsers.js"></script>
+    <script src="./libraries/js/acceptRequestContactReceived.js"></script>
 
     <script src="./libraries/js/readMoreNotif.js"></script>
 	<script src="./libraries/js/markAllAsRead.js"></script>
