[28] Feature: Remove Contact

--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -52,6 +52,7 @@
     <script src="./libraries/js/requestContact.js"></script>
 	<script src="./libraries/js/findUsers.js"></script>
     <script src="./libraries/js/acceptRequestContactReceived.js"></script>
+    <script src="./libraries/js/removeContact.js"></script>
 
     <script src="./libraries/js/readMoreNotif.js"></script>
 	<script src="./libraries/js/markAllAsRead.js"></script>
