--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -462,7 +462,10 @@ label:focus,
 .modal-see-more-notify,
 .modal-see-more-contacts,
 .modal-see-more-contacts-sent,
-.modal-see-more-contacts-received {
+.modal-see-more-contacts-received,
+.read-more-all-chat,
+.read-more-user-chat,
+.read-more-group-chat {
     text-align: center;
 	margin-top: 30px;
 	font-size: 16px;
@@ -722,7 +725,7 @@ label:focus,
 }
 
 .left a.create-group-chat {
-  display: none;
+  display: block;
   float: left;
   width: 40px;
   height: 40px;
@@ -1332,15 +1335,14 @@ label:focus,
 .notify-readed-false{
 	background-color: #EAEAEA;
 }
-.d-none{
-	display: none;
-}
-
 
 .read-more-loader,
 .read-more-contacts-loader,
 .read-more-contacts-sent-loader,
-.read-more-contacts-received-loader{
+.read-more-contacts-received-loader,
+.read-more-all-chat-loader,
+.read-more-user-chat-loader,
+.read-more-group-chat-loader{
 	display: none;
 	left: 50%;
     transform: translateX(-50%);
@@ -1373,7 +1375,6 @@ label:focus,
 	  transform: scaleY(1); 
 	} 
 }
-
 
 .loader{
 	display: block;
@@ -1430,6 +1431,14 @@ label:focus,
 	}
 }
 
+.d-none{
+	display: none !important;
+}
+
 .d-important{
 	display: inline-block !important;
+}
+
+.tab-content > .active{
+	background-color: #fff;
 }
