--- a/src/views/main/home/sections/leftSide.ejs
+++ b/src/views/main/home/sections/leftSide.ejs
@@ -21,7 +21,13 @@
 										<img src="./libraries/images/users/group-avatar-trungquandev.png" alt="Thumb - Group">
 									</div>
 									<span class="name">
-										<span class="group-chat-name">Group:</span> <%= conversation.name %>
+										<span class="group-chat-name">
+											<% if(conversation.name.length > 15){ %>
+												<%= conversation.name.substr(0, 15) + '...' %>
+											<% } else{ %>
+												<%= conversation.name %>
+											<% } %>
+										</span> 
 									</span>
 									<span class="time">Hai giờ trước</span>
 									<span class="preview">Chào cả nhóm</span>
@@ -35,7 +41,11 @@
 										<img src="./libraries/images/users/<%= conversation.avatar %>" alt="Thumb - Contact">
 									</div>
 									<span class="name">
-										<%= conversation.username %>
+										<% if(conversation.username.length > 15){ %>
+											<%= conversation.username.substr(0, 15) + '...' %>
+										<% } else{ %>
+											<%= conversation.username %>
+										<% } %>
 									</span>
 									<span class="time">Một phút trước</span>
 									<span class="preview">Xin chào</span>
@@ -68,7 +78,11 @@
 									<img src="./libraries/images/users/<%= conversation.avatar %>" alt="Thumb - Contact">
 								</div>
 								<span class="name">
-									<%= conversation.username %>
+									<% if(conversation.username.length > 15){ %>
+										<%= conversation.username.substr(0, 15) + '...' %>
+									<% } else{ %>
+										<%= conversation.username %>
+									<% } %>
 								</span>
 								<span class="time">Một phút trước</span>
 								<span class="preview">Xin chào</span>
@@ -100,7 +114,13 @@
 									<img src="./libraries/images/users/group-avatar-trungquandev.png" alt="Thumb - Group">
 								</div>
 								<span class="name">
-									<span class="group-chat-name">Group:</span> <%= conversation.name %>
+									<span class="group-chat-name">
+										<% if(conversation.name.length > 15){ %>
+											<%= conversation.name.substr(0, 15) + '...' %>
+										<% } else{ %>
+											<%= conversation.name %>
+										<% } %>
+									</span> 
 								</span>
 								<span class="time">Hai giờ trước</span>
 								<span class="preview">Chào cả nhóm</span>
