--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -1157,6 +1157,13 @@ label:focus,
   float: left;
 }
 
+.right .bubble.me img.avatar-small {
+  margin-left: 10px;
+}
+.right .bubble.you img.avatar-small {
+  margin-right: 10px;
+}
+
 .right .bubble.me a {
   float: left;
   border-bottom: 1.5px solid #c8d6e5;
@@ -1441,4 +1448,9 @@ label:focus,
 
 .tab-content > .active{
 	background-color: #fff;
+}
+
+#screen-chat{
+	width: 100%;
+	height: 100%;
 }
